# cln-plugins

./: Cargo.toml  LICENSE  README.md
event-plugin/: Cargo.toml  README.md  build.rs
event-plugin/proto/events/v1/: event.proto
event-plugin/src/: broker.rs  config.rs  events.rs  main.rs  proto.rs
metrics-plugin/: Cargo.toml  README.md  regtest-harness.py
metrics-plugin/src/: cache.rs  events.rs  main.rs  metrics.rs
vchannel-plugin/: Cargo.toml  README.MD
vchannel-plugin/src/: errors.rs  handlers.rs  hooks.rs  main.rs  rpc.rs  utils.rs
vchannel-plugin/src/cln/: client.rs  mod.rs
vchannel-plugin/src/datastore/: entity.rs  mod.rs
vchannel-plugin/src/jsonrpc/: mod.rs  models.rs
vchannel-plugin/tests/: test_plugin.py
